# cargo-revolve

./: .gitignore  Cargo.toml  README.md
src/: config.rs  definitions.rs  error.rs  main.rs
src/commands/: build.rs  info.rs  mod.rs
tests/: custom_test.rs  integration_test.rs
tests/common/: mod.rs
tests/fixtures/custom-build-project/: Cargo.toml  build-script.sh  custom.spec.in
tests/fixtures/custom-build-project/src/: main.rs
tests/fixtures/sample-project/: CHANGELOG.md  Cargo.toml  sample.service  sample.spec.in
