[package]
name = "cargo-revolve"
version = "0.2.4"
authors = ["Norm O <normo.pub@gmail.com>"]
edition = "2024"
license = "MPL-2.0"

description = "A Cargo subcommand to build RPMs using a .spec template, bridging the gap between Rust projects and native RPM tooling."
keywords = ["cargo", "rpm", "spec", "packaging"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/normano/cargo-revolve"

[dependencies]
# For robust CLI parsing and argument handling
clap = { version = "4.5", features = ["derive"] }

# For deserializing the [package.metadata] section from Cargo.toml
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# For ergonomic application-level error handling
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

# For correctly finding workspace/package info and Cargo.toml paths
cargo_metadata = "0.18"

flate2 = "1.0"
tar = "0.4"
ignore = "0.4"  # For intelligently walking the source tree.
shlex = "1.1.0"
walkdir = "2.5.0"
which = "8.0"

# For templating the .spec file
tera = "1.20"

rpm = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.2.0"