[package]
name = "sample-project"
version = "0.1.0"
edition = "2021"
description = "A sample project for testing cargo-revolve."
license = "MIT"

[package.metadata.revolve]
spec_template = "sample.spec.in"
output_dir = "dist"
changelog = "CHANGELOG.md"
assets = [
  { source = "target/release/sample-project", dest = "/usr/bin/sample-project", mode = "0755" },
  { source = "config/", dest = "/etc/sample-project/conf.d/" },
]